FIXED timer always<t_step (b4 not when t_step decrease)

--- a/pro.html
+++ b/pro.html
@@ -263,6 +263,7 @@
 				pivotList[ lev ].add( tail_LCM ) //TAIL )
                 // compute the new t_steps
                 t_step = 20-Math.floor(lev/5)
+                timer = Math.min(timer, t_step)
 				console.log("levelUP >",lev)
 			}
 	
@@ -509,7 +510,8 @@
                         } else bodySegList[i].position.y = s
                     }
                     if ( turnList[lev-1] ){
-                        var ind = Math.min( 1, Math.max( 0, Math.floor(s*10)))
+                        var ind = Math.floor(s*10)
+                        //var ind = Math.min( 1, Math.max( 0, Math.floor(s*10)))
                         if (ind != prev_ind) {
                             // tor
                             pivotList[lev-1].remove( suppCurList[prev_ind] )
@@ -562,7 +564,6 @@
                     // end of cell
                     if (timer <= 0) move()
                    
-                    
                     moveBody()
                     pivotHead.rotation.z = PI/6*Math.sin(t/10) + PI/6 // mouth
                     tongue.position.y = segLen/2*Math.sin(t/10) - segLen/2 // tongue
