--- a/snake.html
+++ b/snake.html
@@ -37,9 +37,9 @@
     <body>
         <script src="js/pro.js"></script>
         <div id='div_info'> 
-            <span id='txt_level'>Score 0</span><br>
             <span id='txt_view'>Perspective View <small>(V)</small></span><br>
-            <span id='txt_music'>Music ON <small>(M)</small></span>
+            <span id='txt_music'>Music ON <small>(M)</small></span><br><br>
+            <span id='txt_level'>Score 0</span>
         </div>
         <div id='div_start' class='center'> 
             <font size=20>Snake 3D</font><br><br>
@@ -57,7 +57,7 @@
         <script>
             // border: 3px dashed #1c87c9; - dashed box for css div
             // debug variables
-            var debug = true
+            var debug = false
             var pause = false
             var camDelta = 0.5
             
